[tool.isort]
color_output = true
profile = "black"

[tool.poetry]
authors = ["adolf <adolf1321794021@gmail.com>"]
description = ""
name = "web3info"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
openai = "^1.54.4"
python-dotenv = "^1.0.1"
phidata = "^2.5.32"
duckduckgo-search = "^6.3.5"
dspy = "^2.5.31"

[tool.poetry.group.lint.dependencies]
ruff = "^0.6.8"
toml-sort = "^0.23.1"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
ignore = [
  "ANN",
  "D",
  "ERA001",
  "FIX",
  "INP001",
  "PGH",
  "PLR0913",
  "RUF001",
  "RUF012",
  "S",
  "T20",
  "TCH003",
  "TD",
]
select = ["ALL"]

[tool.ruff.per-file-ignores]
"docs/conf.py" = ["INP001"]
"test/*" = ["S101"]

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true
